syntax = "proto3";

package grpc;

service UserDAOService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
  rpc GetAccount(GetAccountRequest) returns (GetUserResponse) {}
}

message CreateUserRequest {
  string user_name = 1;
  string password = 2;
}

message CreateUserResponse {
  int32 user_id = 1;
}

message GetUserRequest {
  string user_name = 1;
}

message GetAccountRequest {
  string user_name = 1;
  string password =2;
}

message GetUserResponse {
  string user_name = 1;
  string password = 2;
  int32 id = 3;
}